reverted more by genre section
changed more by genre cards back to their own element to keep the bleed-over-edges visual effect when scrolling.

--- a/index.html
+++ b/index.html
@@ -167,90 +167,89 @@
 						</div><!-- tiled-list -->
 
 						<button onclick="more_bygenre_btn()" id="more_bygenre_btn">Show More</button>
-
-						<div id="scrolling_genre_cards">
-							<div class="tiled-list-card">
-								<h4>Action</h4>
-								<div class="card-tiled-list">
-									<div class="tile"><a href="https://kitsu.io/anime/fate-zero"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6028/large.jpg?1492613350" alt="Fate Zero"></img></a></div>						
-									<div class="tile"><a href="https://kitsu.io/anime/one-punch-man"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10740/large.jpg?1441243505" alt="One-Punch Man"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/attack-on-titan"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7442/large.jpg?1418580054" alt="Attack on Titan"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11469/large.jpg?1456690771" alt="My Hero Academia"></img></a></div>								
-								</div>
-							</div><!--Action-->
-							<div class="tiled-list-card">
-								<h4>Comedy</h4>
-								<div class="card-tiled-list">						
-									<div class="tile"><a href="https://kitsu.io/anime/saiki-kusuo-no-psi-nan-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12127/large.jpg?1464614325" alt="The Disastrous Life of Saiki K."></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/space-dandy"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7910/large.jpg?1408462883" alt="Space Dandy"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/the-devil-is-a-part-timer"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7314/large.jpg?1420871133" alt="The Devil is a Part-Timer!"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/hinamatsuri"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14018/large.jpg?1523809871" alt="HINAMATSURI"></img></a></div>
-									<!--<div class="tile"><a href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10941/large.jpg?1448505014" alt="KonoSuba"></img></a></div>-->
-								</div>	
-							</div><!--Comedy-->			
-							<div class="tiled-list-card">
-								<h4>Daily Life</h4>
-								<div class="card-tiled-list">						
-									<div class="tile"><a href="https://kitsu.io/anime/sakura-quest"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12793/large.jpg?1493960935" alt="Sakura Quest"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/demi-chan-wa-kataritai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12529/large.jpg?1489936267" alt="Interviews With Monster Girls"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/yuru-camp"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13480/large.jpg?1514516868" alt="Laid-Back Camp"></img></a></div>					
-									<div class="tile"><a href="https://kitsu.io/anime/flying-witch"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11317/large.jpg?1457377835" alt="Flying Witch"></img></a></div>
-									<!--<div class="tile"><a href="https://kitsu.io/anime/new-game"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11467/large.jpg?1459364811" alt="New Game!"></img></a></div>-->
-								</div>
-							</div><!--Daily Life-->
-							<div class="tiled-list-card">
-								<h4>Drama</h4>
-								<div class="card-tiled-list">						
-									<div class="tile"><a href="https://kitsu.io/anime/shinsekai-yori"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6887/large.jpg?1439415307" alt="From the New World"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/nagi-no-asukara"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7370/large.jpg?1436734819" alt="A Lull in the Sea"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/violet-evergarden"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12230/large.jpg?1514504093" alt="Violet Evergarden"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/death-parade"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/9969/large.jpg?1420871264" alt="Death Parade"></img></a></div>					
-								</div>
-							</div><!--Drama-->
-							<div class="tiled-list-card">
-								<h4>Fantasy</h4>
-								<div class="card-tiled-list">						
-									<div class="tile"><a href="https://kitsu.io/anime/mahou-tsukai-no-yome"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13228/large.jpg?1506420117" alt="The Ancient Magus' Bride"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/no-game-no-life"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7880/large.jpg?1418914006" alt="No Game, No Life"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/sword-art-online"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6589/large.jpg?1416428763" alt="Sword Art Online"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/made-in-abyss"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13273/large.jpg?1490500479" alt="Made in Abyss"></img></a></div>					
-								</div>
-							</div><!--Fantasy-->
-							<div class="tiled-list-card">
-								<h4>Romance</h4>
-								<div class="card-tiled-list">													
-									<div class="tile"><a href="https://kitsu.io/anime/gekkan-shoujo-nozaki-kun"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8402/large.jpg?1416321073" alt="Monthly Girls' Nozaki-kun"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/tonikaku-kawaii"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43034/large.jpg?1603043746" alt="TONIKAWA: Over the Moon For You"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru"><img class="thumbnail" src="https://cdn.myanimelist.net/images/anime/11/49459.jpg" alt="My Teen Romantic Comedy SNAFU"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41966/large.jpg?1553271462" alt="The Quintessential Quintuplets"></img></a></div>					
-									<!--<div class="tile"><a href="https://kitsu.io/anime/kanojo-okarishimasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43028/large.jpg?1597697493" alt="Rent-a-Girlfriend"></img></a></div>-->
-									<!--<div class="tile"><a href="https://kitsu.io/anime/toradora"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3532/large.jpg?1458499777" alt="Toradora!"></img></a></div>-->
-									<!--<div class="tile"><a href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10621/large.jpg?1432401413" alt="Snow White with the Red Hair"></img></a></div>-->
-								</div>
-							</div><!--Romance-->
-							<div class="tiled-list-card">
-								<h4>Sci-Fi</h4>
-								<div class="card-tiled-list">						
-									<div class="tile"><a href="https://kitsu.io/anime/steins-gate"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/5646/large.jpg?1505188227" alt="Steins Gate"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/psycho-pass"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7000/large.jpg?1434911398" alt="Psycho-Pass"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/kekkai-sensen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8646/large.jpg?1426772654" alt="Blood Blockade Battlefront"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/kiseijuu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8147/large.jpg?1513365783" alt="Parasyte the maxim"></img></a></div>
-								</div>
-							</div><!--Sci-Fi-->
-							<div class="tiled-list-card">
-								<h4>Old School Clasics</h4>
-								<div class="card-tiled-list">						
-									<div class="tile"><a href="https://kitsu.io/anime/cowboy-bebop"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/1/large.jpg?1431697256" alt="Cowboy Bebop"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/baccano"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/2039/large.jpg?1416278673" alt="Baccano!"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/black-lagoon"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/789/large.jpg?1416410660" alt="Black Lagoon"></img></a></div>
-									<div class="tile"><a href="https://kitsu.io/anime/death-note"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/1376/large.jpg?1457383324" alt="Death Note"></img></a></div>					
-								</div>
-							</div><!--Old School Clasics-->	
-							<div class="tiled-list-card last-card"></div>
-						</div><!-- scrolling_genre_cards -->
-
 					</div><!--anime Series-->
-		
+
+					<div id="scrolling_genre_cards" class="favorite-item">
+						<div class="tiled-list-card first-card">
+							<h4>Action</h4>
+							<div class="card-tiled-list">
+								<div class="tile"><a href="https://kitsu.io/anime/fate-zero"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6028/large.jpg?1492613350" alt="Fate Zero"></img></a></div>						
+								<div class="tile"><a href="https://kitsu.io/anime/one-punch-man"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10740/large.jpg?1441243505" alt="One-Punch Man"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/attack-on-titan"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7442/large.jpg?1418580054" alt="Attack on Titan"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/boku-no-hero-academia"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11469/large.jpg?1456690771" alt="My Hero Academia"></img></a></div>								
+							</div>
+						</div><!--Action-->
+						<div class="tiled-list-card">
+							<h4>Comedy</h4>
+							<div class="card-tiled-list">						
+								<div class="tile"><a href="https://kitsu.io/anime/saiki-kusuo-no-psi-nan-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12127/large.jpg?1464614325" alt="The Disastrous Life of Saiki K."></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/space-dandy"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7910/large.jpg?1408462883" alt="Space Dandy"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/the-devil-is-a-part-timer"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7314/large.jpg?1420871133" alt="The Devil is a Part-Timer!"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/hinamatsuri"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14018/large.jpg?1523809871" alt="HINAMATSURI"></img></a></div>
+								<!--<div class="tile"><a href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10941/large.jpg?1448505014" alt="KonoSuba"></img></a></div>-->
+							</div>	
+						</div><!--Comedy-->			
+						<div class="tiled-list-card">
+							<h4>Daily Life</h4>
+							<div class="card-tiled-list">						
+								<div class="tile"><a href="https://kitsu.io/anime/sakura-quest"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12793/large.jpg?1493960935" alt="Sakura Quest"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/demi-chan-wa-kataritai"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12529/large.jpg?1489936267" alt="Interviews With Monster Girls"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/yuru-camp"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13480/large.jpg?1514516868" alt="Laid-Back Camp"></img></a></div>					
+								<div class="tile"><a href="https://kitsu.io/anime/flying-witch"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11317/large.jpg?1457377835" alt="Flying Witch"></img></a></div>
+								<!--<div class="tile"><a href="https://kitsu.io/anime/new-game"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/11467/large.jpg?1459364811" alt="New Game!"></img></a></div>-->
+							</div>
+						</div><!--Daily Life-->
+						<div class="tiled-list-card">
+							<h4>Drama</h4>
+							<div class="card-tiled-list">						
+								<div class="tile"><a href="https://kitsu.io/anime/shinsekai-yori"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6887/large.jpg?1439415307" alt="From the New World"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/nagi-no-asukara"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7370/large.jpg?1436734819" alt="A Lull in the Sea"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/violet-evergarden"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/12230/large.jpg?1514504093" alt="Violet Evergarden"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/death-parade"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/9969/large.jpg?1420871264" alt="Death Parade"></img></a></div>					
+							</div>
+						</div><!--Drama-->
+						<div class="tiled-list-card">
+							<h4>Fantasy</h4>
+							<div class="card-tiled-list">						
+								<div class="tile"><a href="https://kitsu.io/anime/mahou-tsukai-no-yome"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13228/large.jpg?1506420117" alt="The Ancient Magus' Bride"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/no-game-no-life"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7880/large.jpg?1418914006" alt="No Game, No Life"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/sword-art-online"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/6589/large.jpg?1416428763" alt="Sword Art Online"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/made-in-abyss"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/13273/large.jpg?1490500479" alt="Made in Abyss"></img></a></div>					
+							</div>
+						</div><!--Fantasy-->
+						<div class="tiled-list-card">
+							<h4>Romance</h4>
+							<div class="card-tiled-list">													
+								<div class="tile"><a href="https://kitsu.io/anime/gekkan-shoujo-nozaki-kun"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8402/large.jpg?1416321073" alt="Monthly Girls' Nozaki-kun"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/tonikaku-kawaii"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43034/large.jpg?1603043746" alt="TONIKAWA: Over the Moon For You"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru"><img class="thumbnail" src="https://cdn.myanimelist.net/images/anime/11/49459.jpg" alt="My Teen Romantic Comedy SNAFU"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/5-toubun-no-hanayome"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/41966/large.jpg?1553271462" alt="The Quintessential Quintuplets"></img></a></div>					
+								<!--<div class="tile"><a href="https://kitsu.io/anime/kanojo-okarishimasu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/43028/large.jpg?1597697493" alt="Rent-a-Girlfriend"></img></a></div>-->
+								<!--<div class="tile"><a href="https://kitsu.io/anime/toradora"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3532/large.jpg?1458499777" alt="Toradora!"></img></a></div>-->
+								<!--<div class="tile"><a href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/10621/large.jpg?1432401413" alt="Snow White with the Red Hair"></img></a></div>-->
+							</div>
+						</div><!--Romance-->
+						<div class="tiled-list-card">
+							<h4>Sci-Fi</h4>
+							<div class="card-tiled-list">						
+								<div class="tile"><a href="https://kitsu.io/anime/steins-gate"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/5646/large.jpg?1505188227" alt="Steins Gate"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/psycho-pass"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7000/large.jpg?1434911398" alt="Psycho-Pass"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/kekkai-sensen"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8646/large.jpg?1426772654" alt="Blood Blockade Battlefront"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/kiseijuu"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8147/large.jpg?1513365783" alt="Parasyte the maxim"></img></a></div>
+							</div>
+						</div><!--Sci-Fi-->
+						<div class="tiled-list-card">
+							<h4>Old School Clasics</h4>
+							<div class="card-tiled-list">						
+								<div class="tile"><a href="https://kitsu.io/anime/cowboy-bebop"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/1/large.jpg?1431697256" alt="Cowboy Bebop"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/baccano"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/2039/large.jpg?1416278673" alt="Baccano!"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/black-lagoon"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/789/large.jpg?1416410660" alt="Black Lagoon"></img></a></div>
+								<div class="tile"><a href="https://kitsu.io/anime/death-note"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/1376/large.jpg?1457383324" alt="Death Note"></img></a></div>					
+							</div>
+						</div><!--Old School Clasics-->	
+						<div class="tiled-list-card last-card"></div>
+					</div><!-- scrolling_genre_cards -->					
+
 					<div class="favorite-item"><!--anime film-->
 						<h2>Anime Film</h2>
 						<div class="tiled-list">
