--- a/index.html
+++ b/index.html
@@ -588,7 +588,10 @@
 							</div>
 						</div>
 					</a>		
-					<a class="lf-link" href="https://www.youtube.com/channel/UC1ZjO5p5aDezRxzNVYQfg4Q">
+
+					<button onclick="more_anitube_btn()" id="more_anitube_btn" class="more-lf-link-btn">Show more</button>
+					
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/channel/UC1ZjO5p5aDezRxzNVYQfg4Q">
 						<div class="lf-item-container">								
 							<img class="lf-image" src="https://yt3.ggpht.com/a/AATXAJyExDAi2hvzKG0KjaLSfCgQWSgTSSwZo7a0ysNn4g=s176-c-k-c0xffffffff-no-rj-mo"></img>
 							<div class="lf-text">
@@ -597,7 +600,7 @@
 							</div>
 						</div>
 					</a>		
-					<a class="lf-link" href="https://www.youtube.com/channel/UCcmxOGYGF51T1XsqQLewGtQ">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/channel/UCcmxOGYGF51T1XsqQLewGtQ">
 						<div class="lf-item-container">								
 							<img class="lf-image" src="https://yt3.ggpht.com/a/AATXAJw3KmdgUVbLM03xZ5lC1TOimg08c2U4KDf9dp3C=s176-c-k-c0xffffffff-no-rj-mo"></img>
 							<div class="lf-text">
@@ -606,7 +609,7 @@
 							</div>
 						</div>
 					</a>		
-					<a class="lf-link" href="https://www.youtube.com/channel/UCWSs25yYe8gZW8NnVvsBpsw">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/channel/UCWSs25yYe8gZW8NnVvsBpsw">
 						<div class="lf-item-container">								
 							<img class="lf-image" src="https://yt3.ggpht.com/a/AATXAJxKqw9pvbtPVihMYoBMthxkz-znw_ehZou8KLjY=s176-c-k-c0xffffffff-no-rj-mo"></img>
 							<div class="lf-text">
@@ -615,7 +618,7 @@
 							</div>
 						</div>
 					</a>		
-					<a class="lf-link" href="https://www.youtube.com/channel/UC29UF398Umfu62RUMqb9TUg">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/channel/UC29UF398Umfu62RUMqb9TUg">
 						<div class="lf-item-container">								
 							<img class="lf-image" src="https://yt3.ggpht.com/a/AATXAJzPCoLbC7ur3hNGLhmRIgDsrCOzTU6s3XO0lUpz=s176-c-k-c0xffffffff-no-rj-mo"></img>
 							<div class="lf-text">
@@ -624,7 +627,7 @@
 							</div>
 						</div>
 					</a>		
-					<a class="lf-link" href="https://www.youtube.com/channel/UCnQjSjicyHuuwZRKIAHI8ow">
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/channel/UCnQjSjicyHuuwZRKIAHI8ow">
 						<div class="lf-item-container">								
 							<img class="lf-image" src="https://yt3.ggpht.com/a/AATXAJz0BYqP2Ym6YfPBlmgZDxiolhR9PZiW4MBanD7Z0A=s176-c-k-c0xffffffff-no-rj-mo"></img>
 							<div class="lf-text">
