updated anime series bottom margin
updated favorite anime series container bottom margin to match grid gap when show more button is clicked to show more by genera.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 				</div><!-- watching -->
 				
 				<div id="tab_favorites" class="tab tab-active main-item">
-					<div class="favorite-item"><!--anime Series-->
+					<div id="fav_item_animeseries" class="favorite-item"><!--anime Series-->
 						<h2>Anime Series</h2>
 						<div class="tiled-list">
 							<div class="tile"><a href="https://kitsu.io/anime/soul-eater"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/3128/large.jpg?1417748138" alt="Soul Eater"></img></a></div>					
