implemented show more ops

--- a/index.html
+++ b/index.html
@@ -352,11 +352,12 @@
 						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/4J8jcI0WtzM"><span class="song-anime">Blood Blockade Battlefront,</span><span class="song-title">"Hello,world!" by Bump of Chicken</span></a></div>
 						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="song-anime">Samurai Champloo,</span><span class="song-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>
 						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="song-anime">No Game No Life,</span><span class="song-title">"This Game" by Konomi Suzuki</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/UjjTMNDZi-A"><span class="song-anime">Death Parade,</span><span class="song-title">"Flyers" BRADIO</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/atxYe-nOa9w"><span class="song-anime">One Punch Man,</span><span class="song-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/Ef_ZfhqN-ls"><span class="song-anime">New Game!,</span><span class="song-title">"Sakura Skip" by Fourfolium</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/SaKdpMnwZf0"><span class="song-anime">Domestic Girlfriend,</span><span class="song-title">"Kawaki wo Ameku" by Minami</span></a></div>
-						<div class="video-dropdown-item"><a class="video-header-link" href="https://youtu.be/aZenmeRytEM"><span class="song-anime">Noragami Aragoto,</span><span class="song-title">"Kyouran Hey Kids!" by The Oral Cigarettes</span></a></div>
+						<button onclick="more_video_items_op_btn()" id="more_video_items_op_btn" class="more-video-items-btn">Show more</button>
+						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/UjjTMNDZi-A"><span class="song-anime">Death Parade,</span><span class="song-title">"Flyers" BRADIO</span></a></div>
+						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/atxYe-nOa9w"><span class="song-anime">One Punch Man,</span><span class="song-title">"The Hero!! Set Fire to the Furious Fist" by JAM Project</span></a></div>
+						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/Ef_ZfhqN-ls"><span class="song-anime">New Game!,</span><span class="song-title">"Sakura Skip" by Fourfolium</span></a></div>
+						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/SaKdpMnwZf0"><span class="song-anime">Domestic Girlfriend,</span><span class="song-title">"Kawaki wo Ameku" by Minami</span></a></div>
+						<div class="video-dropdown-item more-video-item-op"><a class="video-header-link" href="https://youtu.be/aZenmeRytEM"><span class="song-anime">Noragami Aragoto,</span><span class="song-title">"Kyouran Hey Kids!" by The Oral Cigarettes</span></a></div>
 
 						<!--
 							<div><a href="https://youtu.be/7-EwChG1WTA">Laid-Back Camp, "SHINY DAYS" by Asaka</a></div>
