typo and consistency fixes

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 						</div><!-- tiled-list -->
 					</div><!-- Movie Night-->						
 
-					<div class="watching-item"><!--Backlog Binging-->
-						<h2>Backlog Binging</h2>
+					<div class="watching-item"><!--Backlog Bingeing-->
+						<h2>Backlog Bingeing</h2>
 						<div class="tiled-list">
 							<div class="tile"><a href="https://kitsu.io/anime/hataraku-saibou-tv"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/14212/large.jpg?1597697195" alt="Cells at Work!"></img></a></div>
 							<div class="tile"><a href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru-kan"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/42194/large.jpg?1597696997" alt="My Teen Romantic Comedy SNAFU Climax"></img></a></div>
@@ -102,7 +102,7 @@
 							<div class="tile"><a href="https://kitsu.io/anime/shirobako"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a></div> 
 							<div class="tile"><a href="https://kitsu.io/anime/sakurasou-no-pet-na-kanojo"><img class="thumbnail" src="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828" alt="https://media.kitsu.io/anime/poster_images/7023/large.jpg?1597696828"></img></a></div> 
 						</div><!-- tiled-list -->
-					</div><!--Backlog Binging -->
+					</div><!--Backlog Bingeing -->
 
 					<div class="watching-item"><!--Waiting To Binge-->
 						<h2>Waiting for Dub to Finish</h2>
@@ -166,7 +166,7 @@
 							<!--<div class="tile"><a href=""><img class="thumbnail" src="" alt=""></img></a></div>-->
 						</div><!-- tiled-list -->
 
-						<button onclick="more_bygenre_btn()" id="more_bygenre_btn">Show More</button>
+						<button onclick="more_bygenre_btn()" id="more_bygenre_btn">Show more</button>
 					</div><!--anime Series-->
 
 					<div id="scrolling_genre_cards" class="favorite-item">
@@ -304,7 +304,7 @@
 							<div class="tile"><a href="https://myanimelist.net/character/36828/Asuna_Yuuki"><img class="thumbnail" src="https://media.kitsu.io/characters/images/35731/original.jpg?1483096805" alt="Asuna Yuuki"></img></a></div>	
 						</div>
 
-						<button onclick="more_female_btn()" id="more_female_btn" class="more-char-btn">Show More</button>
+						<button onclick="more_female_btn()" id="more_female_btn" class="more-char-btn">Show more</button>
 
 						<div id="more_characters_fm" class="tiled-list">
 							<div class="tile more-female"><a href="https://myanimelist.net/character/498/Rin_Toosaka"><img class="thumbnail" src="https://cdn.myanimelist.net/images/characters/2/270529.jpg" alt="Rin Toosaka"></img></a></div>
